--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang: "ko">
-	<head>
-		<meta charset: "utf-8">
-		<title>핼로우 월드</title>
-	</head>
-	<body>
-		<h1>Hello,world!</title>
-		<p>Sanggue의 홈페이지에 오신 것을 환영합니다.</p>
-	</body>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>배상규 자기소개</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>배상규 (BaeSangGue)</h1>
+        <p>이메일: <a href="mailto:ecc0308@dongyang.ac.kr">ecc0308@dongyang.ac.kr</a></p>
+    </header>
+
+    <section id="about">
+        <h2>소개</h2>
+        <p><strong>재학 대학:</strong> 동양 미래 대학교</p>
+        <p><strong>재학 학과:</strong> 컴퓨터 소프트웨어 학과</p>
+        <p><strong>입학년도:</strong> 2023년</p>
+        <p><strong>다룰 수 있는 언어 및 도구:</strong> C, HTML, CSS, Figma</p>
+        <p><strong>배우고 있는 언어 및 도구:</strong> JAVA, Python, GitHub</p>
+    </section>
+
+    <section id="experience">
+        <h2>기술 개발 경험</h2>
+        <ul>
+            <li>전공 동아리 프로젝트 진행중</li>
+            <li>경진대회 프로젝트 진행중</li>
+            <li>음원 사이트 HTML로만 개발 (조별과제) 진행중</li>
+        </ul>
+    </section>
+
+    <section id="interests">
+        <h2>관심 기술 분야</h2>
+        <p>임베디드, 스마트팜, 게임개발</p>
+    </section>
+
+    <section id="photo">
+        <h2>사진</h2>
+        <img src="your-photo.jpg" alt="배상규 사진">
+    </section>
+</body>
 </html>
 
