--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 </head>
 <body>
     <header>
-        <h1>배상규 (BaeSangGue)</h1>
-        <p>이메일: <a href="mailto:ecc0308@dongyang.ac.kr">ecc0308@dongyang.ac.kr</a></p>
+        <h1>자기소개서</h1>
     </header>
 
     <section id="about">
         <h2>소개</h2>
-        <p><strong>재학 대학:</strong> 동양 미래 대학교</p>
-        <p><strong>재학 학과:</strong> 컴퓨터 소프트웨어 학과</p>
-        <p><strong>입학년도:</strong> 2023년</p>
-        <p><strong>다룰 수 있는 언어 및 도구:</strong> C, HTML, CSS, Figma</p>
-        <p><strong>배우고 있는 언어 및 도구:</strong> JAVA, Python, GitHub</p>
+        <div class="about-content">
+            <img src="your-photo.jpg" alt="배상규 사진" class="profile-photo">
+            <div class="about-text">
+                <p><strong>이름:</strong> 배상규 (BaeSangGue)</p>
+                <p><strong>이메일:</strong> <a href="mailto:ecc0308@dongyang.ac.kr">ecc0308@dongyang.ac.kr</a></p>
+                <p><strong>재학 대학:</strong> 동양 미래 대학교</p>
+                <p><strong>재학 학과:</strong> 컴퓨터 소프트웨어 학과</p>
+                <p><strong>입학년도:</strong> 2023년</p>
+                <p><strong>다룰 수 있는 언어 및 도구:</strong> C, HTML, CSS, Figma</p>
+                <p><strong>배우고 있는 언어 및 도구:</strong> JAVA, Python, GitHub</p>
+            </div>
+        </div>
     </section>
 
     <section id="experience">
@@ -32,13 +38,23 @@
 
     <section id="interests">
         <h2>관심 기술 분야</h2>
-        <p>임베디드, 스마트팜, 게임개발</p>
-    </section>
-
-    <section id="photo">
-        <h2>사진</h2>
-        <img src="your-photo.jpg" alt="배상규 사진">
+        <div class="interest-content">
+            <div class="interest-item">
+                <img src="embedded.jpg" alt="임베디드 이미지" class="interest-photo">
+                <p>임베디드 시스템</p>
+            </div>
+            <div class="interest-item">
+                <img src="smartfarm.jpg" alt="스마트팜 이미지" class="interest-photo">
+                <p>스마트팜 시스템</p>
+            </div>
+            <div class="interest-item">
+                <img src="game-development.jpg" alt="게임개발 이미지" class="interest-photo">
+                <p>게임 개발 </p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
+
+
 
